--- a/DnD-Character-Generator-main/index.html
+++ b/DnD-Character-Generator-main/index.html
@@ -1,13 +1,11 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>D&D API Fetch</title>
+</head>
+<body>
+  <h1>Fetching D&D API Data</h1>
+  <script src="script.js"></script>
+</body>
 </html>
+
